--- a/scss/components/_benefits.scss
+++ b/scss/components/_benefits.scss
@@ -15,13 +15,13 @@
     margin-top: 0px;
 
 }
-.text {
+.benefits__nav {
     display: flex;
     justify-content: space-between;
     text-align: left;
 }
 
-.mum-icon {
+.benefits__image {
     display: flex;
     height: 120px;
     background-size: contain;
@@ -32,7 +32,7 @@
     align-items: center;
 }
 
-.mum h3 {
+.benefits__meta {
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -43,12 +43,12 @@
     margin-bottom: 10px;
 }
 
-.mum p {
+.benefits__description {
     line-height: 24px;
     letter-spacing: 0.03em;
     color: #757575;
 }
 
-.mum {
+.benefits__item {
     width: 270px;
 }
