--- a/scss/components/_comand.scss
+++ b/scss/components/_comand.scss
@@ -2,7 +2,7 @@
     background-color: #f5f4fa;
 }
 
-.comand-one {
+.comand-gallery__item {
     width: 270px;
     background: var(--white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -12,16 +12,16 @@
     display: block;
 }
 
-.comand-all {
+.comand-gallery {
     justify-content: space-between;
     display: flex;
 }
 
-.comands {
+.comand-box {
     padding: 30px;
 }
 
-.comand h2 {
+.comand-name {
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -29,7 +29,7 @@
     padding-bottom: 50px;
 }
 
-.comand p {
+.comand-box__direction {
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -37,7 +37,7 @@
     color: #757575;
 }
 
-.comand h3 {
+.comand-box__name {
     color: var(--main-color);
     font-weight: 500;
     font-size: 16px;
@@ -47,18 +47,18 @@
     margin-bottom: 10px;
 }
 
-.social-comand {
+.comand-box__social {
     display: flex;
     justify-content: center;
     margin-top: 16px;
 
 }
 
-.social-comand li {
+.comand-box__item {
     margin-right: 10px;
 }
 
-.social-comand a {
+.comand-box__link {
     height: 44px;
     width: 44px;
     display: flex;
@@ -73,28 +73,13 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-comand a:hover,
-.social-comand a:focus {
+.comand-box__link:hover,
+.comand-box__link:focus {
     background-color: var(--blu);
     fill: var(--white);
 }
 
-.instagram-comand {
-    height: 20px;
-    width: 20px;
-}
-
-.twitter-comand {
-    height: 20px;
-    width: 20px;
-}
-
-.facebook-comand {
-    height: 20px;
-    width: 20px;
-}
-
-.linkedin-comand {
+.comand-box__icon {
     height: 20px;
     width: 20px;
 }
