--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -2,7 +2,7 @@
     padding: 94px 0;
 }
 
-.clients-class {
+.clients__link {
     width: 100%;
     height: 100%;
     display: flex;
@@ -14,13 +14,13 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients li {
+.clients__item {
     display: flex;
     width: calc(100%/6 - 30px/6*5);
     height: 92px;
 }
 
-.clients h2 {
+.clients__text {
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -30,15 +30,15 @@
     margin-bottom: 50px;
 }
 
-.clients ul {
+.clients__nav {
     display: flex;
     justify-content: space-between;
     margin: 0;
     padding: 0;
 }
 
-.clients-class:hover,
-.clients-class:focus {
+.clients__link:hover,
+.clients__link:focus {
     fill: var(--blu);
     border: 1px solid #2196F3;
 }
