--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,4 +14,6 @@
 @import './components/logo';
 @import './components/sections';
 @import './components/container';
+@import './components/join';
+@import './components/subscription';
 
