--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+:root {
+  --main-color: #212121;
+  --blu: #2196f3;
+  --white: white;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -7,12 +13,6 @@ body {
   text-decoration: none;
   background-color: var(--white);
   color: var(--main-color);
-}
-
-:root {
-  --main-color: #212121;
-  --blu: #2196f3;
-  --white: white;
 }
 
 * {
@@ -170,19 +170,19 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.adress li {
+.footer-adress__item {
   margin-bottom: 9px;
 }
 
-.adress li:nth-last-of-type(1) {
+.footer-adress__item:nth-last-of-type(1) {
   margin-bottom: 0;
 }
 
-.footer-text :hover, .footer-text :focus {
+.footer-address:hover, .footer-address:focus {
   color: var(--blu);
 }
 
-.footer-text ul, li, a {
+.footer-nav ul, li, a {
   text-decoration: none;
 }
 
@@ -204,7 +204,7 @@ ul {
   color: var(--white);
 }
 
-.info-footer {
+.footer-adress__info {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
@@ -213,180 +213,8 @@ ul {
   font-style: normal;
 }
 
-.join {
-  margin-left: 70px;
-  color: var(--white);
-  font-style: normal;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-transform: uppercase;
-  width: 206px;
-  height: 80px;
-}
-
-.join h2 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--white);
-}
-
-.social {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 20px;
-}
-
-.social a {
-  height: 44px;
-  width: 44px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.1);
-  margin: 0px;
-  padding: 0px;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.instagram {
-  fill: var(--white);
-  height: 20px;
-  width: 20px;
-}
-
-.twitter {
-  fill: var(--white);
-  height: 20px;
-  width: 20px;
-}
-
-.facebook {
-  fill: var(--white);
-  height: 20px;
-  width: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.linkedin {
-  fill: var(--white);
-  height: 20px;
-  width: 20px;
-}
-
-.social a:hover, .social a:focus {
-  background-color: var(--blu);
-}
-
-.subscription {
-  width: 570px;
-  height: 86px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: 93px;
-}
-
-.subscription h2 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  margin-bottom: 20px;
-}
-
-.footer-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.subscription-label input {
-  padding-left: 16px;
-}
-
-.subscription-input {
-  width: 358px;
-  height: 50px;
-  font-size: 16px;
-  line-height: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: #2F303A;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-}
-
-.subscription-button {
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  cursor: pointer;
-  letter-spacing: 0.06em;
-  color: var(--white);
-  background: #2196F3;
-  fill: var(--white);
-  margin-left: 12px;
-  border-radius: 4px;
-  border: none;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.subscription-button-submit {
-  margin-left: 10px;
-}
-
-.subscription-button:hover, .subscription-button:focus {
-  background-color: #188CE8;
+.footer-adress__info:focus, .footer-adress__info:hover {
+  color: var(--blu);
 }
 
 .bisnes {
@@ -692,7 +520,7 @@ ul {
   padding: 94px 0;
 }
 
-.clients-class {
+.clients__link {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -711,7 +539,7 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients li {
+.clients__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -719,7 +547,7 @@ ul {
   height: 92px;
 }
 
-.clients h2 {
+.clients__text {
   font-weight: 700;
   font-size: 36px;
   line-height: 42px;
@@ -729,7 +557,7 @@ ul {
   margin-bottom: 50px;
 }
 
-.clients ul {
+.clients__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -740,8 +568,8 @@ ul {
   padding: 0;
 }
 
-.clients-class:hover,
-.clients-class:focus {
+.clients__link:hover,
+.clients__link:focus {
   fill: var(--blu);
   border: 1px solid #2196F3;
 }
@@ -1030,6 +858,7 @@ ul {
   line-height: 14px;
   letter-spacing: 0.01em;
   color: #757575;
+  margin-bottom: 20px;
 }
 
 .modal-input-wrapper {
@@ -1039,7 +868,6 @@ ul {
   display: flex;
   width: 100%;
   margin-top: 4px;
-  margin-bottom: 10px;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
@@ -1079,7 +907,7 @@ ul {
 }
 
 .modal-input:focus,
-textarea:focus {
+.modal__textarea:focus {
   border: 1px solid #2196F3;
   border-radius: 4px;
 }
@@ -1096,6 +924,9 @@ textarea:focus {
   display: flex;
   margin: 20px 0 0 12px;
   padding: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer;
   font-size: 14px;
   line-height: 24px;
@@ -1170,7 +1001,7 @@ textarea:focus {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-textarea {
+.modal__textarea {
   display: block;
   width: 100%;
   height: 120px;
@@ -1188,23 +1019,23 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-textarea::-webkit-input-placeholder {
+.modal__textarea::-webkit-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-textarea::-moz-placeholder {
+.modal__textarea::-moz-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-textarea:-ms-input-placeholder {
+.modal__textarea:-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-textarea::-ms-input-placeholder {
+.modal__textarea::-ms-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-textarea::placeholder {
+.modal__textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
@@ -1228,4 +1059,158 @@ textarea::placeholder {
   margin-right: auto;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.join {
+  margin-left: 70px;
+  color: var(--white);
+  font-style: normal;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-transform: uppercase;
+  width: 206px;
+  height: 80px;
+}
+
+.join-name {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white);
+}
+
+.join-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 20px;
+}
+
+.join-social__logo {
+  height: 44px;
+  width: 44px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  margin: 0px;
+  padding: 0px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.join-social__image {
+  fill: var(--white);
+  height: 20px;
+  width: 20px;
+}
+
+.join-social__logo:hover,
+.join-social__logo:focus {
+  background-color: var(--blu);
+}
+
+.subscription {
+  width: 570px;
+  height: 86px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 93px;
+}
+
+.subscription h2 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
+
+.subscription__footer-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.subscription__input {
+  width: 358px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 20px;
+  padding-left: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: #2F303A;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscription__button {
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  cursor: pointer;
+  letter-spacing: 0.06em;
+  color: var(--white);
+  background: #2196F3;
+  fill: var(--white);
+  margin-left: 12px;
+  border-radius: 4px;
+  border: none;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscription__button-submit {
+  margin-left: 10px;
+}
+
+.subscription__button:hover,
+.subscription__button:focus {
+  background-color: #188CE8;
 }/*# sourceMappingURL=main.css.map */
