--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -88,6 +88,7 @@
     line-height: 14px;
     letter-spacing: 0.01em;
     color: #757575;
+    margin-bottom: 20px;
 }
 
 .modal-input-wrapper {
@@ -95,7 +96,6 @@
     display: flex;
     width: 100%;
     margin-top: 4px;
-    margin-bottom: 10px;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
@@ -132,7 +132,7 @@
 }
 
 .modal-input:focus,
-textarea:focus {
+.modal__textarea:focus {
     border: 1px solid #2196F3;
     border-radius: 4px;
 
@@ -148,6 +148,7 @@ textarea:focus {
     display: flex;
     margin: 20px 0 0 12px;
     padding: 0;
+    align-items: center;
     cursor: pointer;
     font-size: 14px;
     line-height: 24px;
@@ -205,7 +206,7 @@ textarea:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-textarea {
+.modal__textarea {
     display: block;
     width: 100%;
     ;
@@ -223,6 +224,6 @@ textarea {
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-textarea::placeholder {
+.modal__textarea::placeholder {
     color: rgba(117, 117, 117, 0.5);
 }
