--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -3,7 +3,7 @@
     letter-spacing: 0.03em;
     font-size: 26px;
     line-height: 31px;
-    color: #000000;
+    color: $black;
     padding: 24px 0;
     margin-right: 93px;
 }
