--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-:root {
-  --main-color: #212121;
-  --blu: #2196f3;
-  --white: white;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -11,8 +5,8 @@ body {
   font-size: 14px;
   text-align: center;
   text-decoration: none;
-  background-color: var(--white);
-  color: var(--main-color);
+  background-color: white;
+  color: #212121;
 }
 
 * {
@@ -68,16 +62,16 @@ ul {
 }
 
 .headertext :hover {
-  color: var(--blu);
+  color: #2196f3;
 }
 
 .web {
-  color: var(--blu);
+  color: #2196f3;
 }
 
 .black {
   position: relative;
-  color: var(--main-color);
+  color: #212121;
   font-weight: 500;
   line-height: 16px;
   letter-spacing: 0.02em;
@@ -128,12 +122,12 @@ ul {
 .info:focus,
 .header-contact:hover,
 .header-contact:focus {
-  color: var(--blu);
-  fill: var(--blu);
+  color: #2196f3;
+  fill: #2196f3;
 }
 
 .active {
-  color: var(--blu);
+  color: #2196f3;
 }
 
 .active::after {
@@ -149,7 +143,7 @@ ul {
 
 .footer {
   background-color: #2F303A;
-  color: var(--white);
+  color: white;
   text-align: left;
   display: list-item;
 }
@@ -179,7 +173,7 @@ ul {
 }
 
 .footer-address:hover, .footer-address:focus {
-  color: var(--blu);
+  color: #2196f3;
 }
 
 .footer-nav ul, li, a {
@@ -189,7 +183,7 @@ ul {
 .google {
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: var(--white);
+  color: white;
   text-decoration: none;
   font-style: normal;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -197,11 +191,11 @@ ul {
 }
 
 .google:hover, .google:focus {
-  color: var(--blu);
+  color: #2196f3;
 }
 
 .footer .webstudio {
-  color: var(--white);
+  color: white;
 }
 
 .footer-adress__info {
@@ -214,7 +208,7 @@ ul {
 }
 
 .footer-adress__info:focus, .footer-adress__info:hover {
-  color: var(--blu);
+  color: #2196f3;
 }
 
 .bisnes {
@@ -230,7 +224,7 @@ ul {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid var(--main-color);
+  outline: 1px solid #212121;
   padding: 200px 0;
   margin: 0 auto 30px;
 }
@@ -258,13 +252,13 @@ ul {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--white);
+  color: white;
   max-width: 696px;
   margin: auto;
 }
 
 .button {
-  background-color: var(--blu);
+  background-color: #2196f3;
   width: 200px;
   height: 50px;
   border-radius: 4px;
@@ -285,7 +279,7 @@ ul {
           align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--white);
+  color: white;
   font-family: inherit;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -307,7 +301,7 @@ ul {
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-color);
+  color: #212121;
   padding-top: 94px;
   margin-top: 0px;
 }
@@ -346,7 +340,7 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-align: left;
-  color: var(--main-color);
+  color: #212121;
   margin-bottom: 10px;
 }
 
@@ -361,12 +355,12 @@ ul {
 }
 
 .comand {
-  background-color: #f5f4fa;
+  background-color: #AFB1B8;
 }
 
 .comand-gallery__item {
   width: 270px;
-  background: var(--white);
+  background: white;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -405,7 +399,7 @@ ul {
 }
 
 .comand-box__name {
-  color: var(--main-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
@@ -452,8 +446,8 @@ ul {
 
 .comand-box__link:hover,
 .comand-box__link:focus {
-  background-color: var(--blu);
-  fill: var(--white);
+  background-color: #2196f3;
+  fill: white;
 }
 
 .comand-box__icon {
@@ -475,7 +469,7 @@ ul {
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-color);
+  color: #212121;
 }
 
 .work-page {
@@ -512,7 +506,7 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: white;
   background: rgba(47, 48, 58, 0.8);
 }
 
@@ -553,7 +547,7 @@ ul {
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-color);
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -596,7 +590,7 @@ ul {
   line-height: 26px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-color);
+  color: #212121;
   margin: 4px;
   border: none;
   border-radius: 4px;
@@ -638,8 +632,8 @@ ul {
 
 .buttonp:hover,
 .buttonp:focus {
-  background-color: var(--blu);
-  color: var(--white);
+  background-color: #2196f3;
+  color: white;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -671,8 +665,8 @@ ul {
 
 .project-link {
   display: block;
-  border: 1px solid #EEEEEE;
-  background-color: var(--white);
+  border: 1px solid #eee;
+  background-color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: relative;
@@ -688,7 +682,7 @@ ul {
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06em;
-  color: var(--main-color);
+  color: #212121;
   line-height: 2.25em;
 }
 
@@ -706,7 +700,7 @@ ul {
 
 .project-link:hover .overlay,
 .project-link:focus .overlay {
-  color: var(--white);
+  color: white;
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
@@ -730,7 +724,7 @@ ul {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
-  color: var(--white);
+  color: white;
   background: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(101%);
           transform: translateY(101%);
@@ -747,8 +741,8 @@ ul {
 
 .over:hover,
 .over:focus {
-  background-color: var(--white);
-  border: 1px solid #EEEEEE;
+  background-color: white;
+  border: 1px solid #eee;
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -776,7 +770,7 @@ ul {
           transform: translate(-50%, -50%);
   min-height: 581px;
   min-width: 528px;
-  background-color: var(--white);
+  background-color: white;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -788,7 +782,7 @@ ul {
   height: 30px;
   right: 8px;
   top: 8px;
-  background: #FFFFFF;
+  background: white;
   background-image: url(../images/Vector.svg);
   background-repeat: no-repeat;
   background-size: 10px;
@@ -831,12 +825,12 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   letter-spacing: 0.03em;
-  color: var(--main-color);
+  color: #212121;
   margin-bottom: 12px;
 }
 
 .modal-form a {
-  color: var(--blu);
+  color: #2196f3;
   margin-left: 5px;
   text-decoration: underline;
 }
@@ -952,7 +946,7 @@ ul {
   width: 16px;
   height: 15px;
   margin-right: 8px;
-  border: 1.5px solid var(--main-color);
+  border: 1.5px solid #212121;
   border-radius: 2px;
   cursor: pointer;
   -webkit-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -960,7 +954,7 @@ ul {
 }
 
 .checkbox-input:checked + .checkbox-custom-box {
-  background: var(--blu);
+  background: #2196f3;
   border-color: transparent;
 }
 
@@ -985,7 +979,7 @@ ul {
   text-align: center;
   cursor: pointer;
   letter-spacing: 0.06em;
-  color: var(--white);
+  color: white;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   margin: auto;
@@ -1010,7 +1004,7 @@ ul {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: var(--main-color);
+  color: #212121;
   cursor: pointer;
   margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1063,7 +1057,7 @@ ul {
 
 .join {
   margin-left: 70px;
-  color: var(--white);
+  color: white;
   font-style: normal;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -1083,7 +1077,7 @@ ul {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--white);
+  color: white;
 }
 
 .join-social {
@@ -1118,14 +1112,14 @@ ul {
 }
 
 .join-social__image {
-  fill: var(--white);
+  fill: white;
   height: 20px;
   width: 20px;
 }
 
 .join-social__logo:hover,
 .join-social__logo:focus {
-  background-color: var(--blu);
+  background-color: #2196f3;
 }
 
 .subscription {
@@ -1147,7 +1141,7 @@ ul {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: white;
   margin-bottom: 20px;
 }
 
@@ -1196,7 +1190,7 @@ ul {
   text-align: center;
   cursor: pointer;
   letter-spacing: 0.06em;
-  color: var(--white);
+  color: white;
   background: #2196F3;
   fill: var(--white);
   margin-left: 12px;
