--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -20,9 +20,9 @@
     transform: translate(-50%, -50%);
     min-height: 581px;
     min-width: 528px;
-    background-color: var(--white);
+    background-color: $white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    border-radius: $borderRadius;
 }
 
 .close {
@@ -31,7 +31,7 @@
     height: 30px;
     right: 8px;
     top: 8px;
-    background: #FFFFFF;
+    background: $white;
     background-image: url(../images/Vector.svg);
     background-repeat: no-repeat;
     background-size: 10px;
@@ -55,7 +55,7 @@
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
-    color: #757575;
+    color: $gray;
 }
 
 .modal-form h2 {
@@ -67,12 +67,12 @@
     text-align: center;
     align-items: center;
     letter-spacing: 0.03em;
-    color: var(--main-color);
+    color: $main-color;
     margin-bottom: 12px;
 }
 
 .modal-form a {
-    color: var(--blu);
+    color: $blu;
     margin-left: 5px;
     text-decoration: underline;
 
@@ -87,7 +87,7 @@
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
-    color: #757575;
+    color: $gray;
     margin-bottom: 20px;
 }
 
@@ -99,7 +99,7 @@
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: $gray;
 }
 
 .modal-input-wrapper-checkbox {
@@ -112,7 +112,7 @@
     cursor: pointer;
     outline: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
+    border-radius: $borderRadius;
     padding-left: 42px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -127,19 +127,19 @@
 }
 
 .modal-input:focus-within {
-    border: 1px solid #2196F3;
-    border-radius: 4px;
+    border: 1px solid $darkBlu;
+    border-radius: $borderRadius;
 }
 
 .modal-input:focus,
 .modal__textarea:focus {
-    border: 1px solid #2196F3;
-    border-radius: 4px;
+    border: 1px solid $darkBlu;
+    border-radius: $borderRadius;
 
 }
 
 .modal-input:focus~.modal-icon {
-    fill: #2196F3;
+    fill: $darkBlu;
 }
 
 .checkbox {
@@ -167,22 +167,22 @@
     width: 16px;
     height: 15px;
     margin-right: 8px;
-    border: 1.5px solid var(--main-color);
-    border-radius: 2px;
+    border: 1.5px solid $main-color;
+    border-radius: $borderRadius/2;
     cursor: pointer;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-input:checked+.checkbox-custom-box {
-    background: var(--blu);
+    background: $blu;
     border-color: transparent;
 }
 
 .modal-form-button {
     width: 200px;
     height: 50px;
-    background: #2196F3;
-    border-radius: 4px;
+    background: $darkBlu;
+    border-radius: $borderRadius;
     border: none;
     font-weight: 700;
     font-size: 16px;
@@ -193,7 +193,7 @@
     text-align: center;
     cursor: pointer;
     letter-spacing: 0.06em;
-    color: var(--white);
+    color: $white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     margin: auto;
     margin-top: 30px;
@@ -202,25 +202,24 @@
 
 .modal-form-button:hover,
 .modal-form-button:focus {
-    background: #188CE8;
+    background: $modal-buttom-blu;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .modal__textarea {
     display: block;
     width: 100%;
-    ;
     height: 120px;
     resize: none;
     padding: 12px 16px;
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
-    color: var(--main-color);
+    color: $main-color;
     cursor: pointer;
     margin-top: 4px;
     border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
+    border-radius: $borderRadius;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
