--- a/scss/components/_button-main.scss
+++ b/scss/components/_button-main.scss
@@ -8,7 +8,7 @@
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    outline: 1px solid var(--main-color);
+    outline: 1px solid $main-color;
     padding: 200px 0;
     margin: 0 auto 30px;
 }
@@ -27,16 +27,16 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: var(--white);
+    color: $white;
     max-width: 696px;
     margin: auto;
 }
 
 .button {
-    background-color: var(--blu);
+    background-color: $blu;
     width: 200px;
     height: 50px;
-    border-radius: 4px;
+    border-radius: $borderRadius;
     border: none;
     cursor: pointer;
     margin-top: 30px;
@@ -48,11 +48,11 @@
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: var(--white);
+    color: $white;
     font-family: inherit;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
-    background-color: #188CE8;
+    background-color: $modal-buttom-blu;
 }
