--- a/scss/components/_button-porfolio.scss
+++ b/scss/components/_button-porfolio.scss
@@ -13,10 +13,10 @@
     line-height: 26px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--main-color);
+    color: $main-color;
     margin: 4px;
     border: none;
-    border-radius: 4px;
+    border-radius: $borderRadius;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -53,8 +53,8 @@
 
 .buttonp:hover,
 .buttonp:focus {
-    background-color: var(--blu);
-    color: var(--white);
+    background-color: $blu;
+    color: $white;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
+    border-radius: $borderRadius;
 }
