--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -8,9 +8,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
-    fill: #AFB1B8;
+    border: 1px solid $grayBlu;
+    border-radius: $borderRadius;
+    fill: $grayBlu;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -26,7 +26,7 @@
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--main-color);
+    color: $main-color;
     margin-bottom: 50px;
 }
 
@@ -40,5 +40,5 @@
 .clients__link:hover,
 .clients__link:focus {
     fill: var(--blu);
-    border: 1px solid #2196F3;
+    border: 1px solid $darkBlu;
 }
