--- a/scss/components/_comand.scss
+++ b/scss/components/_comand.scss
@@ -1,10 +1,10 @@
 .comand {
-    background-color: #f5f4fa;
+    background-color: $grayBlu;
 }
 
 .comand-gallery__item {
     width: 270px;
-    background: var(--white);
+    background: $white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     font-size: 16px;
@@ -34,11 +34,11 @@
     line-height: 19px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: $gray;
 }
 
 .comand-box__name {
-    color: var(--main-color);
+    color: $main-color;
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
@@ -69,14 +69,14 @@
     background: rgba(255, 255, 255, 0.1);
     margin: 0px;
     padding: 0px;
-    fill: #AFB1B8;
+    fill: $grayBlu;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comand-box__link:hover,
 .comand-box__link:focus {
-    background-color: var(--blu);
-    fill: var(--white);
+    background-color: $blu;
+    fill: $white;
 }
 
 .comand-box__icon {
