--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer{
-    background-color: #2F303A;
-    color: var(--white);
+    background-color: $footerBG;
+    color: $white;
     text-align: left;
     display: list-item;
 }
@@ -20,7 +20,7 @@
     margin-bottom: 0;
 }
 .footer-address:hover, .footer-address:focus {
-    color: var(--blu);
+    color: $blu;
 }
 
 .footer-nav ul,li,a {
@@ -29,17 +29,17 @@
 .google {
     line-height: 24px;
     letter-spacing: 0.03em;
-    color: var(--white);
+    color: $white;
     text-decoration: none;
     font-style: normal;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .google:hover, .google:focus {
-    color: var(--blu);
+    color: $blu;
 }
 .footer .webstudio {
-    color: var(--white);
+    color: $white;
 }
 .footer-adress__info{
     line-height: 24px;
@@ -50,5 +50,5 @@
     font-style: normal;
 }
 .footer-adress__info:focus, .footer-adress__info:hover {
-    color: var(--blu);
+    color: $blu;
 }
