--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid $headerBorderBT;
 }
 
 .header .container {
@@ -21,16 +21,16 @@
 }
 
 .headertext :hover {
-    color: var(--blu);
+    color: $blu;
 }
 
 .web {
-    color: var(--blu);
+    color: $blu;
 }
 
 .black {
     position: relative;
-    color: var(--main-color);
+    color: $main-color;
     font-weight: 500;
     line-height: 16px;
     letter-spacing: 0.02em;
@@ -45,13 +45,13 @@
     font-weight: 500;
     line-height: 16px;
     letter-spacing: 0.02em;
-    color: #757575;
+    color: $gray;
     text-decoration: none;
     display: flex;
     font-style: normal;
     align-items: center;
     padding: 32px 0px;
-    fill: #757575;
+    fill: $gray;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -71,12 +71,12 @@
 .info:focus,
 .header-contact:hover,
 .header-contact:focus {
-    color: var(--blu);
-    fill: var(--blu);
+    color: $blu;
+    fill: $blu;
 }
 
 .active {
-    color: var(--blu);
+    color: $blu;
 }
 
 .active::after {
@@ -85,7 +85,7 @@
     display: block;
     width: 100%;
     height: 4px;
-    background: #2196F3;
-    border-radius: 2px;
+    background: $darkBlu;
+    border-radius: $borderRadius/2;
     bottom: -1px;
 }
