--- a/scss/components/_project-porfolio.scss
+++ b/scss/components/_project-porfolio.scss
@@ -21,8 +21,8 @@
 
 .project-link {
     display: block;
-    border: 1px solid #EEEEEE;
-    background-color: var(--white);
+    border: 1px solid $grayscale;
+    background-color: $white;
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
@@ -34,7 +34,7 @@
     font-size: 18px;
     line-height: 36px;
     letter-spacing: 0.06em;
-    color: var(--main-color);
+    color: $main-color;
     line-height: 2.25em;
 }
 
@@ -42,7 +42,7 @@
     font-size: 16px;
     line-height: 30px;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: $gray;
 }
 
 .textmaker {
@@ -52,7 +52,7 @@
 
 .project-link:hover .overlay,
 .project-link:focus .overlay {
-    color: var(--white);
+    color: $white;
     transform: translateY(0%);
 }
 
@@ -70,7 +70,7 @@
     font-size: 18px;
     line-height: 28px;
     letter-spacing: 0.03em;
-    color: var(--white);
+    color: $white;
     background: rgba(33, 150, 243, 0.9);
     transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -83,7 +83,7 @@
 
 .over:hover,
 .over:focus {
-    background-color: var(--white);
-    border: 1px solid #EEEEEE;
+    background-color: $white;
+    border: 1px solid $grayscale;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
