--- a/scss/components/_subscription.scss
+++ b/scss/components/_subscription.scss
@@ -12,7 +12,7 @@
     line-height: 16px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: $white;
     margin-bottom: 20px;
 }
 
@@ -30,10 +30,10 @@
     align-items: center;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    background-color: #2F303A;
+    background-color: $footerBG;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
+    border-radius: $borderRadius;
 }
 
 .subscription__button {
@@ -48,11 +48,11 @@
     text-align: center;
     cursor: pointer;
     letter-spacing: 0.06em;
-    color: var(--white);
+    color: $white;
     background: #2196F3;
     fill: var(--white);
     margin-left: 12px;
-    border-radius: 4px;
+    border-radius: $borderRadius;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -63,5 +63,5 @@
 
 .subscription__button:hover,
 .subscription__button:focus {
-    background-color: #188CE8;
+    background-color: $modal-buttom-blu;
 }
