--- a/scss/components/_work.scss
+++ b/scss/components/_work.scss
@@ -12,7 +12,7 @@
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--main-color);
+    color: $main-color;
 }
 
 .work-page {
@@ -39,6 +39,6 @@
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: $white;
     background: rgba(47, 48, 58, 0.8);
 }
