--- a/scss/utils/_base.scss
+++ b/scss/utils/_base.scss
@@ -5,8 +5,8 @@ body {
     font-size: 14px;
     text-align: center;
     text-decoration: none;
-    background-color: var(--white);
-    color: var(--main-color);
+    background-color: $white;
+    color: $main-color;
 }
 
 * {
