--- a/scss/components/_button-main.scss
+++ b/scss/components/_button-main.scss
@@ -51,8 +51,7 @@
     color: $white;
     font-family: inherit;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover {
-    background-color: $modal-buttom-blu;
+    &:hover {
+            background-color: $modal-buttom-blu;
+        }
 }
