--- a/scss/components/_button-porfolio.scss
+++ b/scss/components/_button-porfolio.scss
@@ -18,6 +18,13 @@
     border: none;
     border-radius: $borderRadius;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: $blu;
+        color: $white;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: $borderRadius;
+    }
 }
 
 .button1 {
@@ -51,10 +58,3 @@
     cursor: pointer;
 }
 
-.buttonp:hover,
-.buttonp:focus {
-    background-color: $blu;
-    color: $white;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: $borderRadius;
-}
