--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -12,6 +12,11 @@
     border-radius: $borderRadius;
     fill: $grayBlu;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        fill: var(--blu);
+        border: 1px solid $darkBlu;
+    }
 }
 
 .clients__item {
@@ -37,8 +42,3 @@
     padding: 0;
 }
 
-.clients__link:hover,
-.clients__link:focus {
-    fill: var(--blu);
-    border: 1px solid $darkBlu;
-}
