--- a/scss/components/_comand.scss
+++ b/scss/components/_comand.scss
@@ -71,13 +71,14 @@
     padding: 0px;
     fill: $grayBlu;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: $blu;
+        fill: $white;
+    }
 }
 
-.comand-box__link:hover,
-.comand-box__link:focus {
-    background-color: $blu;
-    fill: $white;
-}
+
 
 .comand-box__icon {
     height: 20px;
