--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -39,6 +39,10 @@
     display: block;
     padding: 32px 0px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    $:focus, &:hover{
+    color: $blu;
+    fill: $blu;
+    }
 }
 
 .header-contact {
@@ -53,6 +57,10 @@
     padding: 32px 0px;
     fill: $gray;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    $:focus, &:hover{
+    color: $blu;
+    fill: $blu;
+    }
 }
 
 .header-right-site {
@@ -63,16 +71,6 @@
 
 .icon-header {
     margin-right: 10px;
-}
-
-.black:hover,
-.info:hover,
-.black:focus,
-.info:focus,
-.header-contact:hover,
-.header-contact:focus {
-    color: $blu;
-    fill: $blu;
 }
 
 .active {
