--- a/scss/components/_project-porfolio.scss
+++ b/scss/components/_project-porfolio.scss
@@ -80,10 +80,9 @@
     position: relative;
     overflow: hidden;
 }
-
-.over:hover,
-.over:focus {
-    background-color: $white;
-    border: 1px solid $grayscale;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+// .overLay:hover,
+// .overLay:focus {
+//     background-color: $white;
+//     border: 1px solid $grayscale;
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+// }
