--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import './utils/variables';
 @import './utils/base';
+@import './utils/colors';
 
 @import './components/header';
 @import './components/footer';
