--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,6 @@
 @import './components/bisnes';
 @import './components/button-porfolio';
 @import './components/clients';
-@import './components/comand';
 @import './components/container';
 @import './components/footer';
 @import './components/header';
@@ -17,5 +16,5 @@
 @import './components/project-porfolio';
 @import './components/sections';
 @import './components/subscription';
+@import './components/team';
 @import './components/work';
-
