--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -189,7 +189,7 @@
     height: 15px;
     margin-right: 8px;
     border: 1.5px solid $main-color;
-    border-radius: $borderRadius/2;
+    border-radius: calc($borderRadius/2);
     cursor: pointer;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
