--- a/scss/components/_bisnes.scss
+++ b/scss/components/_bisnes.scss
@@ -11,6 +11,43 @@
     outline: 1px solid $main-color;
     padding: 200px 0;
     margin: 0 auto 30px;
+    padding: 94px 0px;
+    &__title {
+            font-weight: 900;
+            font-size: 40px;
+            line-height: 60px;
+            text-align: center;
+            letter-spacing: 0.06em;
+            text-transform: uppercase;
+            color: $white;
+            max-width: 696px;
+            margin: auto;
+        }
+    
+    &__button {
+            background-color: $blu;
+            width: 200px;
+            height: 50px;
+            border-radius: $borderRadius;
+            border: none;
+            cursor: pointer;
+            margin-top: 30px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 0.06em;
+            color: $white;
+            font-family: inherit;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:hover {
+                background-color: $modal-buttom-blu;
+            }
+    }
 }
 
 .bisnes .container {
@@ -18,40 +55,4 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-}
-
-.efect {
-    font-weight: 900;
-    font-size: 40px;
-    line-height: 60px;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: $white;
-    max-width: 696px;
-    margin: auto;
-}
-
-.button {
-    background-color: $blu;
-    width: 200px;
-    height: 50px;
-    border-radius: $borderRadius;
-    border: none;
-    cursor: pointer;
-    margin-top: 30px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: $white;
-    font-family: inherit;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover {
-            background-color: $modal-buttom-blu;
-        }
 }
