--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,44 +1,42 @@
 .clients {
     padding: 94px 0;
+    &__link {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid $grayBlu;
+            border-radius: $borderRadius;
+            fill: $grayBlu;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:hover,
+            &:focus {
+                fill: var(--blu);
+                border: 1px solid $darkBlu;
+            }
+        }
+        &__item {
+            display: flex;
+            width: calc(100%/6 - 30px/6*5);
+            height: 92px;
+        }
+        &__text {
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 42px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            color: $main-color;
+            margin-bottom: 50px;
+        }
+        &__nav {
+            display: flex;
+            justify-content: space-between;
+            margin: 0;
+            padding: 0;
+        }
 }
 
-.clients__link {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid $grayBlu;
-    border-radius: $borderRadius;
-    fill: $grayBlu;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        fill: var(--blu);
-        border: 1px solid $darkBlu;
-    }
-}
-
-.clients__item {
-    display: flex;
-    width: calc(100%/6 - 30px/6*5);
-    height: 92px;
-}
-
-.clients__text {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $main-color;
-    margin-bottom: 50px;
-}
-
-.clients__nav {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-}
 
