--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -9,48 +9,50 @@
     display: flex;
     align-items: baseline;
 }
-.footer-text {
+.footer-adress {
     margin-top: 20px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-adress__item{
-    margin-bottom: 9px;
-}
-.footer-adress__item:nth-last-of-type(1){
-    margin-bottom: 0;
-}
-
-
-.footer-nav ul,li,a {
-    text-decoration: none;
-}
-.google {
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: $white;
-    text-decoration: none;
-    font-style: normal;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &__item {
+            margin-bottom: 9px;
+    }
+    &__item:nth-last-of-type(1) {
+            margin-bottom: 0;
+    }
+    &__nav ul,
+    li,
+    a {
+            text-decoration: none;
+        }
+    &__google {
+            line-height: 24px;
+            letter-spacing: 0.03em;
+            color: $white;
+            text-decoration: none;
+            font-style: normal;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     &:hover,
     &:focus {
-        color: $blu;
+                color: $blu;
+    }}
+    &__info {
+            line-height: 24px;
+            letter-spacing: 0.03em;
+            color: rgba(255, 255, 255, 0.6);
+            margin: 0px;
+            text-decoration: none;
+            font-style: normal;
+      
+    &:focus,
+    &:hover {
+                color: $blu;
     }
 }
-
+    
+}
 
 .footer .webstudio {
     color: $white;
 }
-.footer-adress__info{
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    margin: 0px;
-    text-decoration: none;
-    font-style: normal;
-    &:focus,
-    &:hover {
-            color: $blu;
-        }
-}
+
 
