--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -39,7 +39,7 @@
     display: block;
     padding: 32px 0px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    $:focus, &:hover{
+    &:focus, &:hover{
     color: $blu;
     fill: $blu;
     }
@@ -57,7 +57,7 @@
     padding: 32px 0px;
     fill: $gray;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    $:focus, &:hover{
+    &:focus, &:hover{
     color: $blu;
     fill: $blu;
     }
@@ -75,15 +75,15 @@
 
 .active {
     color: $blu;
+    &::after {
+            content: '';
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 4px;
+            background: $darkBlu;
+            border-radius: calc($borderRadius/2);
+            bottom: -1px;
+        }
 }
 
-.active::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 4px;
-    background: $darkBlu;
-    border-radius: $borderRadius/2;
-    bottom: -1px;
-}
