--- a/scss/components/_work.scss
+++ b/scss/components/_work.scss
@@ -1,44 +1,45 @@
-.section .work {
-    padding-top: 0px;
-}
-
 .work {
     padding-top: 0px;
+    padding: 94px 0px;
+    &__title {
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 42px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            color: $main-color;
+        }
+    
+    &__list {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 35px;
+        }
+    &__item {
+                position: relative;
+        }
+    &__image{
+
+        }
+    &__box {
+                position: absolute;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 70px;
+                bottom: 0;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 16px;
+                text-align: center;
+                letter-spacing: 0.03em;
+                text-transform: uppercase;
+                color: $white;
+                background: rgba(47, 48, 58, 0.8);
+    }
 }
 
-.work-text {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $main-color;
-}
 
-.work-page {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 35px;
-}
 
-.work-page__item{
-    position: relative;
-}
 
-.work-page__link{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 70px;
-    bottom: 0;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $white;
-    background: rgba(47, 48, 58, 0.8);
-}
