--- a/scss/utils/_colors.scss
+++ b/scss/utils/_colors.scss
@@ -1,6 +1,6 @@
     $main-color: #212121;
     $blu: #2196f3;
-    $white: white;
+    $white: #fff;
     $gray: #757575;
     $darkBlu: #2196F3;
     $modal-buttom-blu: #188CE8;
